<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">thevocabmaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_hilfe">Hilfe</string>
    <string name="Registrieren1">Noch kein Account? Registrieren!</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Passwort">Passwort</string>
    <string name="Registrieren">Registrieren</string>
    <string name="Benutzername">Benutzername</string>
    <string name="Login1">Bereits registriert? Zum Login!</string>
    <string name="WörterÜben">Wörter üben</string>
    <string name="Statistik">Statistik</string>
    <string name="Menü">Menü</string>
    <string name="Logout">Logout</string>
    <string name="Weiter">Weiter</string>
    <string name="SpracheÄndern">Sprache ändern</string>
    <string name="Überprüfen">Überprüfen</string>
    <string name="EingabeWort">Bitte gesuchtes Wort eingeben</string>
    <string name="ListeErstellen">Wortliste erstellen</string>
    <string name="AddWord">Füge Wort hinzu</string>
    <string name="DeleteWord">Lösche letztes Wort</string>
    <string name="Deutsch">Deutsch</string>
    <string name="Englisch">Englisch</string>
    <string name="HilfeText"><b>Nutzung der Applikation</b> \n \n Gehen Sie zum Erlernen von Vokabeln folgendermaßen vor:\nNach Betätigen der Schaltfläche <b>Wörter Üben</b> im Menü dieser Applikation finden Sie sich auf dem richtigen Screen.\n Geben Sie nun in das Eingabefeld die Übersetzung des darüber angezeigten Wortes ein. Sind Sie sich Ihrer Übersetzung sicher, drücken Sie die <b>Überprüfen</b> Schaltfläche.\n Nun wird Ihnen angezeigt, ob die Eingabe korrekt war. Anschließend fahren Sie mit weiteren Wörtern auf gleiche Weise fort.\n \n Möchten Sie keine weiteren Wörter üben, verlassen Sie den Screen über den <b>Zurück-Button</b> ihres Handys.\n \n Um Ihren Fortschritt zu überprüfen, können Sie im Menü den Punkt <b>Statistik</b> auswählen. Hier können Sie einsehen, wie viele der Eingaben korrekt oder inkorrekt ausgefallen sind. Indem Sie diese Ansicht periodisch überprüfen, können sie feststellen, ob Sie sich verbessert haben.\nUm die Hilfe zu verlassen und zum <b>Wörter Üben</b> zurückzukehren drücken Sie den <b>Zurück-Button</b>.</string>
    <string name="Statistics">Statistik</string>
    <string name="action_settings">Settings</string>
    <string name="Highscore">Highscore</string>
    <string name="Beste">Das sind die besten Spieler:</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="NewWords">Neue Wörter definieren</string>

</resources>
