<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Menü"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="25dip"
        android:padding="10dip"
        android:singleLine="false"
        android:gravity="center" />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/WörterÜben"
    android:id="@+id/btnÜben"
    android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListeErstellen"
        android:id="@+id/btnListeErstellen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Statistik"
        android:id="@+id/btnStatistik"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_hilfe"
        android:id="@+id/btnSettings"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:singleLine="false" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:text="@string/Logout"
        android:textColor="#21dbd4"
        android:textStyle="bold" />
</LinearLayout>