<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/WörterÜben"
        android:textSize="25dip"
        android:gravity="center"
        android:padding="10dip"
        android:textColor="#333333"
        android:background="@drawable/backgroundueberschrift"/>
    //Aus Datei

    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:text="@string/EingabeWort"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:singleLine="true"
        android:layout_marginTop="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Wort"
        android:id="@+id/gesucht"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eingabeKasten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Statistik"
        android:id="@+id/buttonStatistik"
        android:layout_gravity="right"
        android:layout_marginBottom="-50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Überprüfen"
        android:id="@+id/buttonPruefen"
        android:layout_marginBottom="-50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Weiter"
        android:id="@+id/buttonWeiter"
        android:layout_marginBottom="-50dp" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"

        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="30dp"

            android:id="@+id/imageView"
            android:layout_gravity="left"
            android:src="@drawable/lautsprecher"
            android:layout_marginTop="80dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SpracheÄndern"
            android:id="@+id/buttonSprachWechsel"
            android:singleLine="false"
            android:longClickable="false"
            android:layout_gravity="right"

            android:layout_marginLeft="185dp" />

    </LinearLayout>

    <TextView
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:id="@+id/ausgabe"
        android:textColor="#ffff0000"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="0dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/ausgabeStatistik"
        android:layout_marginBottom="-20dp" />

</LinearLayout>